--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p>I'm a <span class="typing"></span></p>
         </div>
       </section>
-      <section id="projects" class="projects">
+ <section id="projects" class="projects">
         <div class="projects-container">
             <h1>Projects</h1>
             <div class="project-card">
@@ -179,10 +179,26 @@
                 </div>
             </div>
         </section>
+        <section id="opinie" class="vouch">
+        <h1>Vouch</h1>
+            <div class="vouch-container">
+                
+                <div class="carousel-container">
+                    <button class="carousel-btn prev" id="prevBtn">‹</button>
+                    <div class="carousel" id="vouchCarousel">
+                        <!-- Opinie będą ładowane -->
+                    </div>
+                    <button class="carousel-btn next" id="nextBtn">›</button>
+                </div>
+                
+                <div class="carousel-dots" id="carouselDots"></div>
+            </div>
+        </section>
         <section class="footer">
             <h1>Get In Touch</h1>
             <p>© 2025 Miameekk - All Rights Reserved</p>
         </section>
+        <script src="api.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', () => {
                 const sections = document.querySelectorAll('section');
