Remove action attribute from contact form

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="contact-right">
-                    <form action="assets/php/send.php" method="post" class="contact-form">
+                    <form method="post" class="contact-form">
                         <input id="name" type="text" name="name" placeholder="Your Name" required>
                         <input id="email" type="email" name="email" placeholder="Your Email" required>
                         <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
